<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="shawn.thesis.osmnavigation.RouteSearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <!--<ImageView-->
                <!--android:id="@+id/back"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:backgroundTint="#FFFFFF"-->
                <!--android:paddingLeft="10dp"-->
                <!--android:src="@android:drawable/ic_menu_revert" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/model_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/item_car"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/car" />

                <ImageView
                    android:id="@+id/model_bicycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/item_bike"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/bike" />

                <ImageView
                    android:id="@+id/model_walker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/item_walk"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/walk" />
            </LinearLayout>
        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/departure"
            android:ems="20"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:text="Your Location"/>

        <AutoCompleteTextView
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/destination"
            android:ems="20"
            android:singleLine="true"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:textAlignment="center" />


</LinearLayout>
